# grass

./: main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml
core/: grass.py
core/grass_sdk/: extension.py  website.py
core/utils/: file_manager.py  logger.py
core/utils/metrics/: metrics.py
data/: config.py
